# kinetix

./: .dockerignore  .editorconfig  .gitignore  CLAUDE.md  README.md  build.gradle.kts  dev-build.sh  dev-down.sh  dev-nuke.sh  dev-restart.sh  dev-up.sh  docker-compose.services.yml  gradle.properties  settings.gradle.kts  skills-lock.json
risk-engine/: .gitignore  pyproject.toml
risk-engine/docs/: risk-engine.md
risk-engine/scripts/: generate_proto.sh
risk-engine/src/kinetix/common/: types_pb2.py  types_pb2.pyi  types_pb2_grpc.py
risk-engine/src/kinetix/risk/: attribution_pb2.py  attribution_pb2.pyi  attribution_pb2_grpc.py  liquidity_pb2.py  (+15 more)
risk-engine/src/kinetix_risk/: __init__.py  attribution_server.py  backtesting.py  black_scholes.py  bond_pricing.py  brinson.py  converters.py  correlation.py  credit_exposure.py  cross_book_var.py  cross_greeks.py  dependencies.py  dependencies_server.py  ewma.py  expected_shortfall.py  factor_server.py  greeks.py  key_rate_duration.py  liquidity.py  liquidity_server.py  market_data_consumer.py  market_data_models.py  metrics.py  ml_server.py  models.py  monte_carlo.py  portfolio_risk.py  position_resolver.py  regime_detector.py  regulatory_server.py  sa_ccr.py  sa_ccr_server.py  server.py  stress_server.py  swap_pricing.py  valuation.py  var_historical.py  var_monte_carlo.py  var_parametric.py  volatility.py
risk-engine/tests/: conftest.py  test_anomaly_detector.py  test_anomaly_grpc.py  test_backtesting.py  test_black_scholes.py  test_bond_pricing.py  test_brinson.py  test_converter_instrument_types.py  test_correlation.py  test_credit_exposure.py  test_credit_grpc.py  test_credit_model.py  test_cross_book_var.py  test_cross_greeks.py  test_dependencies.py  test_dependencies_converters.py  test_dependencies_grpc.py  test_deterministic_var.py  test_drc_enhanced.py  test_ewma.py  test_expected_shortfall.py  test_factor_server.py  test_frtb_calculator.py  test_frtb_drc.py  test_frtb_models.py  test_frtb_report.py  test_frtb_rrao.py  test_frtb_sbm.py  test_greeks.py  test_key_rate_duration.py  test_liquidity.py  test_liquidity_server.py  test_market_data_consumer.py  test_market_data_converters.py  test_metrics.py  test_ml_performance.py  test_ml_server_detect_regime.py  test_model_store.py  test_monte_carlo.py  test_performance.py  (+27 more)
(+2391 files in other folders)
