[project]
name = "kinetix-risk"
version = "0.1.0"
description = "Python risk engine for Kinetix — VaR, Monte Carlo, Greeks, ML models"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "grpcio>=1.60",
    "protobuf>=4.25",
    "prometheus_client>=0.21",
    "torch>=2.2",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "grpcio-tools>=1.60",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--junitxml=reports/pytest.xml"
markers = [
    "unit: Pure logic tests — no I/O, no gRPC servers",
    "integration: Tests that start an in-process gRPC server",
    "performance: Load and latency tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kinetix_risk"]
